# cen429-2025-2026-5-samet-karas-cpp

./: .gitignore  7-build-app-linux.sh  7-build-app-windows.bat  7-build-doc-windows.bat  8-build-test-windows.bat  9-clean-project.bat  CMakeLists.txt  DoxyfileLibLinux  DoxyfileLibWin  DoxyfileTestLinux  DoxyfileTestWin  LocalEventPlanner_tests_win_cobertura.xml  LocalEventPlannerapp_unit_win_cobertura.xml  README.md  attendees.db  mkdocs.yml
.github/: M0_COMPLETION_GUIDE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/scripts/: README.md  add-issues-to-project.ps1  bulk-add-to-project.ps1  configure-branch-protection.ps1  create-all-issues.ps1  export-plan-to-pdf.ps1  fix-milestone-dates.ps1  make-repo-public.ps1  setup-branch-protection.ps1  setup-project.ps1  update-milestone-dates.ps1
.github/workflows/: build.yml  codeql.yml  cpp.yml  dependency-review.yml
docs/: github-project-setup.md  index.md  plan.md
docs/doxygentestwin/rtf/: refman.rtf
report_doc_lib_hist_linux/: 2023-10-28_20-28-59_CoverageHistory.xml  2023-10-28_20-32-34_CoverageHistory.xml  2023-10-28_20-36-22_CoverageHistory.xml
report_doc_lib_hist_win/: 2023-10-28_19-30-26_CoverageHistory.xml  2024-11-01_18-09-21_CoverageHistory.xml  2024-11-22_15-39-37_CoverageHistory.xml  2024-11-22_15-43-49_CoverageHistory.xml  2024-11-22_15-48-32_CoverageHistory.xml  2024-11-22_15-55-12_CoverageHistory.xml  2024-11-22_16-07-31_CoverageHistory.xml  2024-11-22_17-03-13_CoverageHistory.xml
report_doc_test_hist_linux/: 2023-10-28_20-29-30_CoverageHistory.xml  2023-10-28_20-33-06_CoverageHistory.xml  2023-10-28_20-36-53_CoverageHistory.xml
report_doc_test_hist_win/: 2023-10-28_19-30-27_CoverageHistory.xml  2024-11-01_18-09-25_CoverageHistory.xml  2024-11-22_15-39-38_CoverageHistory.xml  2024-11-22_15-43-50_CoverageHistory.xml  2024-11-22_15-48-33_CoverageHistory.xml  2024-12-29_00-32-35_CoverageHistory.xml  2024-12-29_02-39-33_CoverageHistory.xml  2024-12-29_23-33-06_CoverageHistory.xml  2024-12-30_17-51-20_CoverageHistory.xml  2024-12-31_19-04-06_CoverageHistory.xml  2024-12-31_19-09-54_CoverageHistory.xml  2024-12-31_19-24-44_CoverageHistory.xml  2025-01-01_13-42-28_CoverageHistory.xml  2025-11-04_17-46-39_CoverageHistory.xml  2025-11-04_17-50-18_CoverageHistory.xml  2025-11-04_17-51-33_CoverageHistory.xml  2025-11-04_17-57-53_CoverageHistory.xml  2025-11-04_18-02-08_CoverageHistory.xml  2025-11-04_18-10-17_CoverageHistory.xml  2025-11-04_18-14-51_CoverageHistory.xml  2025-11-04_18-18-24_CoverageHistory.xml  2025-11-04_18-27-17_CoverageHistory.xml  2025-11-04_18-38-57_CoverageHistory.xml  2025-11-04_19-29-38_CoverageHistory.xml  2025-11-04_19-45-08_CoverageHistory.xml  2025-11-04_19-54-50_CoverageHistory.xml  2025-11-05_01-38-30_CoverageHistory.xml  2025-11-05_02-26-11_CoverageHistory.xml  2025-11-05_02-44-12_CoverageHistory.xml  2025-11-05_03-01-25_CoverageHistory.xml  2025-11-05_04-29-19_CoverageHistory.xml  2025-11-05_04-41-28_CoverageHistory.xml  2025-11-05_04-53-01_CoverageHistory.xml  2025-11-05_05-35-20_CoverageHistory.xml  2025-11-05_05-45-23_CoverageHistory.xml  2025-11-05_05-52-21_CoverageHistory.xml  2025-11-05_05-53-39_CoverageHistory.xml  2025-11-05_10-20-44_CoverageHistory.xml
report_test_hist_win/: 2025-01-01_13-32-18_CoverageHistory.xml  2025-01-01_13-36-37_CoverageHistory.xml  2025-01-01_13-43-47_CoverageHistory.xml  2025-01-01_14-26-47_CoverageHistory.xml  2025-01-01_14-33-53_CoverageHistory.xml  2025-01-02_10-35-14_CoverageHistory.xml  2025-01-02_10-48-08_CoverageHistory.xml  2025-01-02_10-50-58_CoverageHistory.xml  2025-01-02_11-02-05_CoverageHistory.xml  2025-01-02_11-14-19_CoverageHistory.xml  2025-01-02_11-19-35_CoverageHistory.xml  2025-11-04_18-15-12_CoverageHistory.xml  2025-11-04_18-18-52_CoverageHistory.xml  2025-11-04_18-28-42_CoverageHistory.xml  2025-11-04_18-28-43_CoverageHistory.xml  2025-11-04_18-39-28_CoverageHistory.xml  2025-11-04_19-31-00_CoverageHistory.xml  2025-11-04_19-31-01_CoverageHistory.xml  2025-11-04_19-46-30_CoverageHistory.xml  2025-11-04_19-46-31_CoverageHistory.xml  2025-11-04_19-56-10_CoverageHistory.xml  2025-11-05_04-53-13_CoverageHistory.xml  2025-11-05_05-35-26_CoverageHistory.xml  2025-11-05_05-45-24_CoverageHistory.xml  2025-11-05_05-52-23_CoverageHistory.xml  2025-11-05_05-53-41_CoverageHistory.xml  2025-11-05_10-22-26_CoverageHistory.xml
src/: namespaces.dox
src/keys/: certificate.crt  private.key  public_key.pem
src/localeventplanner/: CMakeLists.txt
src/localeventplanner/header/: AttendeeManagement.h  DebugCheck.h.orig  DisplayMainMenu.h.orig  DynamicAssetProtection.h  DynamicAssetProtection.h.orig  EventDetails.h  EventDetails.h.orig  FeedbackCollection.h.orig  LocalEventPlanner.h.orig  Rasp.h  SaltAndHMAC.h  ScheduleOrganizer.h.orig  SessionEncryption.h  SessionEncryption.h.orig  SignatureVerification.h.orig  UserAuthentication.h  UserAuthentication.h.orig  VersionAndDeviceBinding.h  WBAES.h  WBAES.h.orig  localeventplanner.h
src/localeventplanner/src/: AttendeeManagement.cpp  AttendeeManagement.cpp.orig  DebugCheck.cpp  DebugCheck.cpp.orig  DisplayMainMenu.cpp  DisplayMainMenu.cpp.orig  DynamicAssetProtection.cpp  DynamicAssetProtection.cpp.orig  EventDetails.cpp  EventDetails.cpp.orig  FeedbackCollection.cpp  FeedbackCollection.cpp.orig  Rasp.cpp  Rasp.cpp.orig  SaltAndHMAC.cpp  SaltAndHMAC.cpp.orig  ScheduleOrganizer.cpp  ScheduleOrganizer.cpp.orig  SessionEncryption.cpp  SessionEncryption.cpp.orig  SignatureVerification.cpp  SignatureVerification.cpp.orig  UserAuthentication.cpp  UserAuthentication.cpp.orig  VersionAndDeviceBinding.cpp  VersionAndDeviceBinding.cpp.orig  WBAES.cpp  WBAES.cpp.orig  localeventplanner.cpp  localeventplanner.cpp.orig
src/localeventplannerapp/: CMakeLists.txt
src/localeventplannerapp/src/: localeventplannerapp.cpp
src/tests/: CMakeLists.txt
src/tests/localeventplanner/: CMakeLists.txt  localeventplanner_test.cpp
src/utility/: CMakeLists.txt
src/utility/header/: sqlite3.h.orig  sqlite3ext.h.orig
src/utility/src/: mathUtility.cpp
